--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,16 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
 
   <body>
+  <nav class="navbar navbar-expand navbar-light bg-light">
+      <img src="https://images.unsplash.com/photo-1556742205-e10c9486e506?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" alt="Table with bowl" style="width:80px" class="bg-info rounded-circle">
+      <span class="navbar-brand">Restaurants MVP</span>
+      <span class="navbar-brand"><%= link_to "Home", restaurants_path %></span>
+      <span class="navbar-brand"><%= link_to "Add", new_restaurant_path %> </span>
+    </nav>
     <%= yield %>
   </body>
 </html>
